--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Buy &#8383;</title>
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -13,7 +13,12 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="hover">
+        <h1 class="orange">{{ message }} &#8383;</h1>
+        <img :src="image" :alt="alt" />
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
